src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Alert_for_Unassigned_Wishes__c</fullName>
        <description>This filed will indicate how long the wish can be unassigned</description>
        <inlineHelpText>In terms of number of days</inlineHelpText>
        <label>Alert for Unassigned Wishes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingAddressVerificationAttempted__c</fullName>
        <inlineHelpText>Last time USPS verification was attempted</inlineHelpText>
        <label>Billing Address Verification Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BillingAddressVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag that indicates that the billing address has been USPS verified</description>
        <inlineHelpText>USPS Verified</inlineHelpText>
        <label>Billing Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Id__c</fullName>
        <description>Contains the unique chapter Id for chapter accounts. Used for upserting records via Mulesoft.</description>
        <externalId>true</externalId>
        <label>Chapter Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will look up to chapter account</description>
        <label>Chapter Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Active Volunteer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <filterItems>
                <field>$User.Account_Name__c</field>
                <operation>equals</operation>
                <valueField>Account.Name</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Active Volunteer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Contact__c</fullName>
        <description>This field will capture company contact</description>
        <label>Company Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Division__c</fullName>
        <description>It holds Department and Division records</description>
        <label>Department/Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DevStaffEmail__c</fullName>
        <description>This field will holds dev staff email</description>
        <label>Dev Staff Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_Notes__c</fullName>
        <description>It shows Do Not Contact Notes or related contacts</description>
        <label>Do Not Contact Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <description>It alert user to Do Not Contact</description>
        <label>Do Not Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>It will holds the account email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Email__c</fullName>
        <description>It will capture the emergency contact email from Wish family form.</description>
        <label>Emergency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Middle_Name__c</fullName>
        <description>It holds the Emergency Contact Middle Name value.</description>
        <label>Emergency Contact Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <description>It will capture the emergency contact phone details</description>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <description>It will capture the emergency contact details</description>
        <label>Emergency Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External RE record Id for upserting</description>
        <externalId>true</externalId>
        <inlineHelpText>External RE record Id for upserting</inlineHelpText>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FY12_Q1__c</fullName>
        <description>It capture the wish  assist number for FY12 Q1.</description>
        <label>FY12 Q1</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY12_Q2__c</fullName>
        <description>It capture the wish assist number for FY12 Q2.</description>
        <label>FY12 Q2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY12_Q3__c</fullName>
        <description>It capture the wish assist number for FY12 Q3.</description>
        <label>FY12 Q3</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Dynamics_Notes__c</fullName>
        <description>Additional detail for Family Dynamics</description>
        <label>Family Dynamics Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family_Dynamics__c</fullName>
        <label>Family Dynamics</label>
        <picklist>
            <picklistValues>
                <fullName>Two Parent Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divided/Multiple Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Parent Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Guardian(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <description>It holds the value of imported record Id</description>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Approval_Status__c</fullName>
        <description>Picklist state status of in-kind approval</description>
        <label>Hidden In-Kind Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intake_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will the intake manager of the chapter.</description>
        <label>Intake Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Intake_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify the whether the in kind donors account approved or not.</description>
        <label>Hidden Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Notes__c</fullName>
        <description>It store the descriptions about the language.</description>
        <label>Language Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MAC_Email__c</fullName>
        <description>This filed is used to store the value of MAC Email.</description>
        <label>Hidden MAC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MAC_Email_del__c</fullName>
        <description>This filed is used to store the value of MAC Email.</description>
        <label>Medical Advisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created from external system.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Direct_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether it is direct contact or not</description>
        <inlineHelpText>Please contact chapter staff before contacting this donor.</inlineHelpText>
        <label>No Direct Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>This field is used to store some informstion</description>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarded_on_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It can show On boarded details on Salesfroce</description>
        <label>Onboarded On SF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_2012_Wishes__c</fullName>
        <description>Field for number pre-2012 wishes</description>
        <label>Pre-2012 Wishes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryLanguage__c</fullName>
        <description>It will capture the known language details it may be more than one language
Help Text</description>
        <label>Primary Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French and French Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It has the primary contact person for this chapter</description>
        <label>Primary Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RE_Account_Description__c</fullName>
        <description>Notes</description>
        <label>RE Account Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Account_Fax__c</fullName>
        <description>NUM</description>
        <label>RE Account Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Account_Name__c</fullName>
        <description>ORG_NAME</description>
        <label>RE Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Account_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Account Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Billing_City__c</fullName>
        <description>CITY</description>
        <label>RE Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Billing_Country__c</fullName>
        <description>COUNTRY</description>
        <label>RE Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Billing_State_Province__c</fullName>
        <description>STATE</description>
        <label>RE Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Billing_Street__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Billing_Zip_Postal_Code__c</fullName>
        <description>POST_CODE</description>
        <label>RE Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Created_By_ID__c</fullName>
        <description>ADDED_BY</description>
        <label>RE Created By ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Created_Date__c</fullName>
        <description>DATE_ADDED</description>
        <label>RE Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Do_Not_Contact_Notes__c</fullName>
        <description>SOLICIT_CODE</description>
        <label>RE Do Not Contact Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Do_Not_Contact__c</fullName>
        <description>SOLICIT_CODE</description>
        <label>RE Do Not Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Email__c</fullName>
        <description>NUM</description>
        <label>RE Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Emergency_Contact_Middle_Name__c</fullName>
        <description>MIDDLE_NAME</description>
        <label>RE Emergency Contact Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Emergency_Contact_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Emergency Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Household_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Household Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>MAWWISHDATAID, IMPORTID
|ID, IMPORT_ID</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Last_Modified_By_ID__c</fullName>
        <description>LAST_CHANGED_BY</description>
        <label>RE Last Modified By ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Last_Modified_Date__c</fullName>
        <description>DATE_LAST_CHANGED</description>
        <label>RE Last Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Notes__c</fullName>
        <description>Notes</description>
        <label>RE Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Relationship_type__c</fullName>
        <description>RELATION_CODE</description>
        <label>RE Relationship type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_SYSTEM_IsIndividual__c</fullName>
        <description>IS_CONSTITUENT</description>
        <label>RE _SYSTEM: IsIndividual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Shipping_City__c</fullName>
        <description>CITY</description>
        <label>RE Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Shipping_Country__c</fullName>
        <description>COUNTRY</description>
        <label>RE Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Shipping_State_Province__c</fullName>
        <description>STATE</description>
        <label>RE Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Shipping_Street__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Shipping_Zip_Postal_Code__c</fullName>
        <description>POST_CODE</description>
        <label>RE Shipping Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Website__c</fullName>
        <description>NUM</description>
        <label>RE Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Wish_Co_ordinator_Hidden_Email__c</fullName>
        <description>NUM</description>
        <label>RE Wish Co-ordinator Hidden Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Form_Password__c</fullName>
        <description>Use for to open Wish referral form</description>
        <label>Referral Form Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_type__c</fullName>
        <description>It will capture the relationship information</description>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandmother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandfather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coworker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granddaughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandchild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShippingAddressVerificationAttempted__c</fullName>
        <inlineHelpText>Last time USPS verification was attempted</inlineHelpText>
        <label>Shipping Address Verification Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShippingAddressVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>USPS Verified</inlineHelpText>
        <label>Shipping Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <description>It hold the timezone of the chapter.</description>
        <label>Timezone</label>
        <picklist>
            <picklistValues>
                <fullName>(GMT-02:00) Brasilia Summer Time (America/Sao_Paulo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-03:00) Argentina Time (America/Argentina/Buenos_Aires)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-03:00) Chile Summer Time (America/Santiago)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-03:30) Newfoundland Standard Time (America/St_Johns)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-04:00) Atlantic Standard Time (America/Halifax)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-04:00) Atlantic Standard Time (America/Puerto_Rico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-04:30) Venezuela Time (America/Caracas)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-05:00) Colombia Time (America/Bogota)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-05:00) Eastern Standard Time (America/Indiana/Indianapolis)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-05:00) Peru Time (America/Lima)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-05:00) Eastern Standard Time (America/New_York)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-05:00) Eastern Standard Time (America/Panama)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-06:00) Central Standard Time (America/Chicago)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-06:00) Central Standard Time (America/El_Salvador)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-06:00) Central Standard Time (America/Mexico_City)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-07:00) Mountain Standard Time (America/Denver)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-07:00) Mountain Standard Time (America/Phoenix)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-08:00) Pacific Standard Time (America/Los_Angeles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-08:00) Pacific Standard Time (America/Tijuana)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-09:00) Alaska Standard Time (America/Anchorage)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will lookup to the volunteer manager</description>
        <label>Volunteer Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wish_Co_ordinator_Hidden_Email__c</fullName>
        <description>This filed is used to get wish co-ordinator email</description>
        <label>Wish Co-ordinator Hidden Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Wish_Co_ordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will look up to the wish coordinator(User)</description>
        <label>Wish Co-ordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wish_Expense_Type__c</fullName>
        <label>Wish Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Airfare Agent Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Air Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Air France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Allegiant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare British Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Frontier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Hawaiian Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Jet Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare KLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Lufthansa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Sun Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare United</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Virgin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare Westjet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Petco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Petland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Petsmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental Avis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental Hertz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Contribution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wish_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will look up to the wish manager</description>
        <label>Wish Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe01__FirstDonationDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>DEPRECATED - First Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__LastDonationDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>DEPRECATED - Last Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__LifetimeDonationHistory_Amount__c</fullName>
        <description>Do not manually update. Updated by automatic processes.</description>
        <label>DEPRECATED - Lifetime Donation Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>